--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <body>
   <div class="profile-container">
     <img src="your-photo.jpg" alt="รูปโปรไฟล์" class="profile-pic" />
-    <h1>พรรณธิดา สุระ8kp</h1>
+    <h1>พรรธิดา สุระคาย</h1>
     <p class="bio">นักศึกษาที่มีความสนใจด้านเทคโนโลยี การออกแบบ และการช่วยเหลือผู้ปกครองในการพัฒนาศักยภาพของลูก ๆ</p>
     <div class="contact">
       <a href="mailto:youremail@example.com">Email</a>
