--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   <div class="profile-container">
     <img src="your-photo.jpg" alt="รูปโปรไฟล์" class="profile-pic" />
     <h1>พรรธิดา สุระคาย</h1>
-    <p class="bio">นางพรรธิดา สุระคาย</p>
+    <p class="bio">เพลง</p>
     <div class="contact">
       <a href="mailto:youremail@example.com">Email</a>
       <a href="https://www.facebook.com/yourprofile" target="_blank">Facebook</a>
