--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 </head>
 <body>
   <div class="profile-container">
-    <img src="your-photo.jpg" alt="รูปโปรไฟล์" class="profile-pic" />
+    <img src="รูปภาพ.jpg" alt="รูปโปรไฟล์" class="profile-pic" />
     <h1>พรรธิดา สุระคาย</h1>
     <p class="bio">เพลง</p>
     <div class="contact">
