Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                 <div class="heading">
                     <h3>แนะนำตัว</h3>
                 </div>
-                <img src="**แทนที่ด้วยลิงก์รูปของคุณ**" alt="รูปโปรไฟล์" class="profile-img">
+                <img src="รูปภาพ.jpg" alt="รูปโปรไฟล์" class="profile-img">
                     <p><strong>ชื่อ น.ส.พรรธิดา สุระคาย (Panthida Surakay)</strong></p>
                     <p><strong>คณะวิทยาศาสตร์ / สาขาวิทยาการคอมพิวเตอร์</strong></p>
                     <p><strong> นักศึกษาปี2</strong></p>
